--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,4 @@ services:
     image: ghcr.io/danielkinahan/firefly-plaid-importer:latest
     volumes:
       - ./config.toml:/app/config.toml
+    container_name: firefly-plaid
